<resources>
    <string name="app_name">Life Assistant</string>
    <string name="MainPageTitle">Life Assistant</string>
    <string name="MainPageStartButton">Let\'s Begin</string>
    <string name="Activity">Activity</string>
    <string name="Schedule">Schedule</string>
    <string name="Spontaneous">Spontaneous</string>
    <string name="History">History</string>
    <string name="Active">Currently Active</string>
    <string name="Filter">Filter by Type</string>
    <string name="ActivityDescription">Create an Activity and decide what it does</string>
    <string name="CreateActivityDescription">Decide what this Activity will do</string>
    <string name="ScheduleDescription">Schedule Activities To Happen Automatically</string>
    <string name="CreateEventDescription">Decide when this Event will Happen</string>
    <string name="SpontaneousDescription">Start an Activity Instantly</string>
    <string name="ActiveDescription">Start or stop an existing activity</string>

    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="create_event_title">Create Event</string>

    <string name="event_name_label">Event Name</string>
    <string name="event_name_hint">Enter Event Name</string>

    <string name="event_reminder_label">10 Minute Reminder</string>
    <string name="activity_color_label">Chose a Color</string>

    <string name="activity_label">Activity</string>
    <string name="activity_spinner_hint">Select Activity</string>

    <string name="event_start_time_label">Start Time</string>
    <string name="event_start_time_hint">Select Start Time</string>

    <string name="event_end_time_label">End Time</string>
    <string name="event_end_time_hint">Select End Time</string>

    <string name="delete_button_text">Delete</string>
    <string name="save_button_text">Save</string>

    <string-array name="activities_array">
        <item>Class</item>
        <item>Running</item>
        <item>Driving</item>
        <item>Reading</item>
        <item>Sleeping</item>
    </string-array>

    <string name="create_activity_title">Create Activity</string>
    <string name="edit_activity_title">Edit Activity</string>

    <string name="activity_name_label">Activity Name</string>
    <string name="activity_name_hint">Enter Activity Name</string>

    <string name="add_rule_button_text">Add Rule</string>

    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>
    <string name="view_history_button">View History</string>

</resources>
