<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEventActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:backgroundTint="#03A9F4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/create_event_title" />

    <TextView
        android:id="@+id/eventNameLabel"
        android:text="@string/event_name_label"
        android:labelFor="@id/eventNameEditText"
        android:layout_marginTop="25dp"
        android:layout_marginStart="4dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/eventNameEditText"
        android:hint="@string/event_name_hint"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/activityLabel"
        android:text="@string/activity_label"
        android:labelFor="@id/activitySpinner"
        android:layout_marginTop="25dp"
        android:layout_marginStart="4dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
    
    <Spinner
        android:id="@+id/activitySpinner"
        android:spinnerMode="dialog"
        android:prompt="@string/activity_spinner_hint"
        android:entries="@array/activities_array"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventStartTimeLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="25dp"
                android:labelFor="@id/eventStartTimeEditText"
                android:text="@string/event_start_time_label" />

            <EditText
                android:id="@+id/eventStartTimeEditText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:hint="@string/event_start_time_hint"
                android:inputType="time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventEndTimeLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="25dp"
                android:labelFor="@id/eventEndTimeEditText"
                android:text="@string/event_end_time_label" />

            <EditText
                android:id="@+id/eventEndTimeEditText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:hint="@string/event_end_time_hint"
                android:inputType="time" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#F85F51"
            android:text="@string/cancel_button_text"
            android:textColor="#F2F2F2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#93D358"
            android:text="@string/save_button_text"
            android:textColor="#F2F2F2"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>