<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivityActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createActivityToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4287f5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/create_activity_title"
        app:titleTextColor="#F2F2F2" />

    <TextView
        android:id="@+id/createActivityNameLabel"
        android:text="@string/activity_name_label"
        android:textSize="18sp"
        android:labelFor="@id/createActivityNameEditText"
        android:layout_marginTop="25dp"
        android:layout_marginStart="4dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/createActivityNameEditText"
        android:hint="@string/activity_name_hint"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/createActivityAddRuleButton"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_rule_button_text" />

</LinearLayout>